--- a/package.json
+++ b/package.json
@@ -9,11 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.3",
+    "@rainbow-me/rainbowkit": "^1.0.11",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
+    "mime": "^3.0.0",
     "next": "13.4.19",
+    "nft.storage": "^7.1.1",
     "postcss": "8.4.28",
+    "pxloader": "^1.1.2",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-drag-drop-files": "^2.3.10",
+    "react-spinners": "^0.13.8",
+    "referral-codes": "^2.0.3",
+    "solc": "^0.8.21",
+    "tailwindcss": "3.3.3",
+    "uuid": "^9.0.1",
+    "viem": "^1.12.1",
+    "wagmi": "^1.4.2"
   }
 }
