--- a/database/config.json
+++ b/database/config.json
@@ -1,6 +1,6 @@
 {
-  "twitter": "https://twitter.com/ss",
-  "discord": "https://discord.gg/dd",
-  "mission": "ds",
-  "mirror": "https://mirror.xyz/as"
+  "twitter": "https://twitter.com",
+  "discord": "https://discord.gg",
+  "mission": "",
+  "mirror": "https://mirror.xyz"
 }
