--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
     "@rainbow-me/rainbowkit": "^1.0.11",
+    "async-await-retry": "^2.0.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "ethers": "^6.8.0",
+    "ipfs-only-hash": "^4.0.0",
     "mime": "^3.0.0",
     "next": "13.4.19",
     "nft.storage": "^7.1.1",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.28",
     "pxloader": "^1.1.2",
     "react": "18.2.0",
@@ -23,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-spinners": "^0.13.8",
+    "react-tag-input-component": "^2.0.2",
     "referral-codes": "^2.0.3",
     "solc": "^0.8.21",
     "tailwindcss": "3.3.3",
