--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.3",
+    "@openzeppelin/contracts": "^5.0.0",
+    "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.0.11",
+    "@uidotdev/usehooks": "^2.4.1",
     "async-await-retry": "^2.0.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "cbor": "^9.0.1",
+    "erc721a": "^4.2.3",
     "ethers": "^6.8.0",
     "ipfs-only-hash": "^4.0.0",
     "mime": "^3.0.0",
+    "multiformats": "^12.1.3",
     "next": "13.4.19",
-    "nft.storage": "^7.1.1",
+    "next-auth": "^4.24.4",
+    "nft.storage": "^2.1.1",
     "papaparse": "^5.4.1",
     "postcss": "8.4.28",
     "pxloader": "^1.1.2",
@@ -28,7 +34,9 @@
     "react-drag-drop-files": "^2.3.10",
     "react-spinners": "^0.13.8",
     "react-tag-input-component": "^2.0.2",
+    "react-timer-hook": "^3.0.7",
     "referral-codes": "^2.0.3",
+    "siwe": "^2.1.4",
     "solc": "^0.8.21",
     "tailwindcss": "3.3.3",
     "uuid": "^9.0.1",
