--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "multiformats": "^12.1.3",
     "next": "13.4.19",
     "next-auth": "^4.24.4",
-    "nft.storage": "^7.1.1",
+    "nft.storage": "^2.1.1",
     "papaparse": "^5.4.1",
     "postcss": "8.4.28",
     "pxloader": "^1.1.2",
@@ -37,7 +37,7 @@
     "react-timer-hook": "^3.0.7",
     "referral-codes": "^2.0.3",
     "siwe": "^2.1.4",
-    "solc": "^0.8.21",
+    "solc": "^0.8.23-fixed",
     "tailwindcss": "3.3.3",
     "uuid": "^9.0.1",
     "viem": "^1.12.1",
