--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "multiformats": "^12.1.3",
     "next": "13.4.19",
     "next-auth": "^4.24.4",
-    "nft.storage": "^2.1.1",
+    "nft.storage": "^7.1.0",
     "papaparse": "^5.4.1",
     "postcss": "8.4.28",
     "pxloader": "^1.1.2",
@@ -32,6 +32,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.10",
+    "react-fast-compare": "^3.2.2",
     "react-spinners": "^0.13.8",
     "react-tag-input-component": "^2.0.2",
     "react-timer-hook": "^3.0.7",
